# tripwire

./: .gitignore  .gitleaksignore  LICENSE  README.md  pyproject.toml
arcade_demo/: README.md  __init__.py  conftest.py  server.py  test_server.py
dashboard/: README.md  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: Dashboard.tsx
dashboard/lib/: format.ts  reports.ts  schema.ts
dashboard/public/reports/: index.json  run-seed42-gated.audit.jsonl  run-seed42-gated.json
dashboard/scripts/: check-render-only.mjs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEMO.md  HONESTY.md  TAXONOMY.md  THREAT-MODEL.md  index.html
docs/dashboard/: index.html  index.txt
docs/dashboard/404/: index.html
docs/dashboard/_next/static/chunks/: 255-20d15b20f316b29d.js  main-066c94dce3838246.js  webpack-ed4501d87f2c63e6.js
docs/dashboard/reports/: run-seed42-ungated.json
schema/: run-report-v1.json
scripts/: gen_taxonomy_md.py  install-hooks.sh  leakgate.py
tests/: test_leakgate.py  test_validator_cross_equality.py
tests/adapter/: test_mock_agent.py
tests/attack/: test_engine.py
tests/gate/: test_audit.py  test_codex_r1_regressions.py  test_judge.py  test_output_guard.py  test_pdp.py  test_pep.py  test_policy_core.py  test_types.py
tests/invariants/: strategies.py  test_inv_chokepoint.py  test_inv_leak.py  test_inv_pdp.py
tests/report/: test_scorer.py  test_writer.py
tests/taxonomy/: test_catalog.py
tripwire/: __init__.py  cli.py
tripwire/adapter/: _tools_impl.py  mock_agent.py  mockworld.py  protocol.py  worldfacts.py
tripwire/attack/: baseline.py  corpus.py  engine.py
tripwire/gate/: audit.py  judge.py  output_guard.py  pdp.py  pep.py  policy_core.py  types.py
tripwire/policies/: default.yaml
tripwire/report/: detectors.py  scorer.py  writer.py
tripwire/taxonomy/: catalog.py  catalog_data.py
validators/tool_call_policy/: README.md  SUBMISSION.md  pyproject.toml
validators/tool_call_policy/tests/: test_validator.py
validators/tool_call_policy/tool_call_policy/: __init__.py  policy.py  validator.py
(+3 files in other folders)
