[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-call-policy"
version = "0.1.0"
description = "A Guardrails Hub validator: authorize an agent's structured tool call against a deny-by-default policy. Fail-closed; never repairs a dangerous call."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = ["guardrails-ai>=0.5.0"]
authors = [{ name = "Dakshit Raj" }]
keywords = ["guardrails", "validator", "agent", "tool-use", "authorization", "fail-closed"]

[project.optional-dependencies]
dev = ["pytest>=8", "hypothesis>=6.100"]

[tool.setuptools]
packages = ["tool_call_policy"]
